# ensaios-ni

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  VALIDAR-NO-WINDOWS.txt  pyproject.toml
config/: canais.exemplo.toml
docs/: avaliacao-critica.md  contexto-hardware.md  guia-teste-hardware.md  guia-windows.md  onde-pesquisar.md  referencia-flexlogger.md  referencia-lynx.md  respostas-tio.md  roadmap.md  tarefas-futuras.md  uso.md  validacao-windows.md
docs/adr/: 001-arquitetura-porta-adaptador.md  002-conversao-linear-e-contrato-da-porta.md  003-persistencia-csv-do-ensaio.md  004-camada-de-aplicacao-e-ponto-de-entrada.md  005-contrato-multicanal-da-porta.md  006-calibracao-por-pontos.md  007-aquisicao-continua.md  008-paridade-funcional-flexlogger.md  009-leitura-de-strain-9235.md  010-paridade-com-o-lynx.md  011-estrategia-de-exportacao.md  012-serie-temporal-e-exportadores.md  013-stack-do-dashboard.md  014-fonte-unica-na-documentacao.md  015-ux-e-fluxo-do-dashboard.md  016-visualizacao-do-dashboard.md  017-afericao-na-ui-e-escrita-de-config.md  018-metadata-do-ensaio.md  019-foco-em-validacao-fisica-e-adocao.md  020-parametros-de-strain-por-canal.md  021-fft-ao-vivo-paridade-dinamica.md  022-empacotamento-exe-pyinstaller.md  README.md
docs/handoff/: README.md  handoff-2026-06-20-fase-1-porta-fake-conversao.md  handoff-2026-06-21-persistencia-aplicacao-rumo-windows.md  handoff-2026-06-22-fase-2-tensao-e-respostas-do-tio.md  handoff-2026-06-23-calibracao-tara-strain-9235.md  handoff-2026-06-25-fase-2-fechada-lynx-e-aquisicao-continua.md  (+10 more)
packaging/: ensaios-ni.spec
(+52 files in other folders)
