[project]
name = "ensaios-ni"
version = "0.1.0"
description = "Aquisição de dados para hardware National Instruments (cDAQ-9184 + 9205 + 9235) sobre NI-DAQmx"
readme = "README.md"
requires-python = ">=3.12"
# tomlkit: escreve config TOML preservando comentários e formatação (a UI de aferição persiste
# a calibração no canais.toml). O tomllib da stdlib só lê. Leve, puro-Python, roda em ARM/Windows.
dependencies = ["tomlkit>=0.13"]

# nidaqmx só roda em Windows/Linux x86 — dependência opcional, não instalada no Mac.
# No Windows: `pip install -e .[hardware]`
# openpyxl (extra [excel]) é Python puro e roda no Mac; só é exigido pelo exportador .xlsx.
# gui (PySide6 + pyqtgraph) é o dashboard (Fase 4, ADR-015); roda em ARM, só na camada de widget.
[project.optional-dependencies]
hardware = ["nidaqmx>=1.0"]
excel = ["openpyxl>=3.1"]
gui = ["PySide6>=6.6", "pyqtgraph>=0.13"]
# build: empacota o .exe do dashboard (Fase 6, ADR-022). Só no Windows: pyinstaller packaging/ensaios-ni.spec
build = ["pyinstaller>=6.0"]

[dependency-groups]
dev = ["pytest>=8", "openpyxl>=3.1", "PySide6>=6.6", "pyqtgraph>=0.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ensaios_ni"]

# No Mac não instalamos o próprio pacote; o pytest acha o código via pythonpath.
# No Windows o `pip install -e .` usa o build-system acima normalmente.
[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
